<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_appback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10" >

    <TextView
        android:id="@+id/txt_stage_one_stat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/stage_one_stat"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_at_the_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/at_the_begining_stat"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txt_avg_cig_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/avg_cig_num"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_cig_per_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cig_per_day"
            android:textColor="@color/white"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/txt_if_u_follow_stat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/if_u_follow_stat"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/txt_therap_num_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/therap_num_days"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/days"
            android:textColor="@color/white"
            android:textSize="15sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btn_share_stat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/share_stat"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>