<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_appback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10" >

    <TextView
        android:id="@+id/txt_stage_two_stat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/stage_two_stat"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/progress"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_prog_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="41.17%"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_less_nicotine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/less_nicotine_in_body"
            android:textColor="@color/white"
            android:textSize="15sp" />
        
        <TextView
            android:id="@+id/txt_stage_has_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stage_two_has_taken"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginTop="20dp" />
        <TextView
            android:id="@+id/txt_num_days_to_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/days_to_complete_num"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/txt_days_to_comp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/days_to_comp"
            android:textColor="@color/white"
            android:textSize="15sp" />
        
    </LinearLayout>

    <Button
        android:id="@+id/btn_share_stat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/share_stat"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/button_selector"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>