<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lyt_appback"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/green_back" 
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="10"
    >
	
    <TextView
        android:id="@+id/txt_language"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/language"
        android:textSize="25sp" 
        android:textColor="@color/white"
        android:textStyle="bold"    
        android:gravity="center"/>
     
    <Button 
         android:id="@+id/btn_english"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/english"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:background="@drawable/button_selector"
         />
    <Button 
         android:id="@+id/btn_espanol"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/espanol"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:background="@drawable/button_selector"
         />
    <Button 
         android:id="@+id/btn_francais"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/francais"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:background="@drawable/button_selector"
         />
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"           
            android:gravity="center"
            >
           <TextView 
                android:id="@+id/txt_by"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bybasicstudio"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:drawableTop="@drawable/logo"
                android:drawablePadding="20dp"
                android:gravity="center"/>
            
        </LinearLayout>
     
	<Button 
         android:id="@+id/btn_back"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:text="@string/back"
         android:textSize="20sp"
         android:textColor="@color/white"
         android:background="@drawable/button_selector"
         />
</LinearLayout>
